--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,11 @@ OLLAMA_BASE_URL=http://localhost:11434/api
 GROQ_API_KEY=****
 GROQ_BASE_URL=https://api.groq.com/openai/v1
 
+# (Optional) HuggingFace for FREE image generation
+# Get your free API key from: https://huggingface.co/settings/tokens
+# Note: Pollinations.ai is also available with NO API key required!
+HUGGINGFACE_API_KEY=
+
 
 # (Optional) Default model to use when none is specified
 # Format: provider/model (e.g., openRouter/qwen3-8b:free)
@@ -58,6 +63,12 @@ FILE_BASED_MCP_CONFIG=false
 # Get credentials from: https://console.cloud.google.com/apis/credentials (Google)
 # GitHub: https://github.com/settings/developers
 # Microsoft: https://portal.azure.com/
+# 
+# IMPORTANT FOR GOOGLE OAUTH:
+# 1. Create OAuth 2.0 credentials at: https://console.cloud.google.com/apis/credentials
+# 2. Add authorized redirect URI: https://your-domain.com/api/auth/callback/google
+#    (For local dev: http://localhost:3000/api/auth/callback/google)
+# 3. Copy Client ID and Client Secret below
 
 #GitHub
 GITHUB_CLIENT_ID=
