Update HuggingFace to use fast-sdxl model via router API for better reliability

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ GROQ_BASE_URL=https://api.groq.com/openai/v1
 
 # (Optional) HuggingFace for FREE image generation
 # Get your free API key from: https://huggingface.co/settings/tokens
+# Use format: hf_xxxxxxxxxxxxxxxxxxxxx
 # Note: Pollinations.ai is also available with NO API key required!
 HUGGINGFACE_API_KEY=
 
