--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ GROQ_BASE_URL=https://api.groq.com/openai/v1
 # === Azure AI Services ===
 # Required for DeepSeek-R1 and Grok models, and Azure DALL-E-3 image generation
 AZURE_API_KEY=your_azure_bearer_token_here
-AZURE_BASE_URL=https://flook.services.ai.azure.com/models
+AZURE_BASE_URL=https://kamesh6592-7068-resource.services.ai.azure.com/models
 
 # Azure OpenAI Chat Completions (for GPT-4o-mini)
 AZURE_OPENAI_CHAT_API_KEY=your_azure_openai_chat_bearer_token_here
