Switch to gemini-2.0-flash-exp for better API availability and add configurable model option

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 # === LLM Provider API Keys ===
 # You only need to enter the keys for the providers you plan to use
 GOOGLE_GENERATIVE_AI_API_KEY=****
+
+# Optional: Override the Gemini image generation model
+# Default: gemini-2.0-flash-exp (better availability)
+# Alternative: gemini-2.5-flash-image (experimental, limited quota)
+# GEMINI_IMAGE_MODEL=gemini-2.0-flash-exp
+
 OPENAI_API_KEY=****
 XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
