feat: Replace authentication UI with modern design and update image generation APIs
✨ New Features:
- Modern glassmorphism authentication UI with split layout design
- Beautiful animations and responsive testimonials section
- Enhanced sign-in/sign-up experience matching latest design trends

🔧 API Updates:
- Google Imagen-4 integration via Replicate API (REPLICATE_API_TOKEN)
- Stability AI Ultra for high-quality image generation (STABLE_API_KEY)
- Removed Azure DALL-E-3 dependency for more reliable image generation

🛠️ Technical Improvements:
- Cleaner authentication component architecture
- Better error handling for image generation
- Updated environment variables documentation
- Removed unused dependencies and optimized imports

🎨 UI/UX Enhancements:
- Glass morphism card design with backdrop blur effects
- Animated form elements with staggered delays
- Professional testimonial cards with floating animations
- Improved mobile responsiveness

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,12 @@
 # You only need to enter the keys for the providers you plan to use
 GOOGLE_GENERATIVE_AI_API_KEY=****
 
-# Optional: Override the Gemini image generation model
-# Default: gemini-2.0-flash-exp (better availability)
-# Alternative: gemini-2.5-flash-image (experimental, limited quota)
-# GEMINI_IMAGE_MODEL=gemini-2.0-flash-exp
+# === Image Generation APIs ===
+# Replicate API for Google Imagen-4
+REPLICATE_API_TOKEN=your_replicate_api_token_here
+
+# Stability AI for image generation
+STABLE_API_KEY=your_stability_ai_api_key_here
 
 OPENAI_API_KEY=****
 XAI_API_KEY=****
@@ -31,10 +33,6 @@ AZURE_OPENAI_CHAT_BASE_URL=https://kamesh6592-7068-resource.cognitiveservices.az
 # Azure OpenAI Responses API (for GPT-5-mini)
 AZURE_OPENAI_RESPONSES_API_KEY=your_azure_openai_responses_bearer_token_here
 AZURE_OPENAI_RESPONSES_BASE_URL=https://kamesh6592-7068-resource.cognitiveservices.azure.com/openai
-
-# Azure OpenAI DALL-E-3 image generation
-AZURE_OPENAI_API_KEY=your_azure_openai_bearer_token_here
-AZURE_OPENAI_ENDPOINT=https://flook.cognitiveservices.azure.com/openai/deployments/dall-e-3/images/generations?api-version=2024-02-01
 
 # HuggingFace has been removed from this version
 
