--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ REPLICATE_API_TOKEN=your_replicate_api_token_here
 # Stability AI for image generation
 STABLE_API_KEY=your_stability_ai_api_key_here
 
+# Hugging Face for image generation (e.g., FLUX)
+HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+
 OPENAI_API_KEY=****
 XAI_API_KEY=****
 ANTHROPIC_API_KEY=****
