--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "ioredis": "^5.8.2",
     "json-schema": "^0.4.0",
     "jspdf": "^3.0.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.486.0",
     "mermaid": "^11.12.1",
     "nanoid": "^5.1.6",
@@ -117,6 +118,7 @@
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.4",
@@ -141,6 +143,7 @@
     "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/json-schema": "^7.0.15",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20.19.24",
     "@types/nodemailer": "^7.0.3",
     "@types/pg": "^8.15.6",
@@ -161,10 +164,7 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": [
-      "pnpm format",
-      "pnpm lint:fix"
-    ]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
