feat: add github models support

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,11 @@ OLLAMA_BASE_URL=http://localhost:11434/api
 GROQ_API_KEY=****
 GROQ_BASE_URL=https://api.groq.com/openai/v1
 
+# === GitHub Models ===
+# Use a GitHub Personal Access Token (classic) - no scopes needed
+# Get one here: https://github.com/settings/tokens
+GITHUB_MODELS_API_KEY=
+
 # === Azure AI Services ===
 # Required for Grok models
 AZURE_API_KEY=your_azure_bearer_token_here
